update docker images to use a base of JDK10 to be better container-aware. bump app memory to 512mb.